--- a/paginas/login2.html
+++ b/paginas/login2.html
@@ -10,13 +10,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="../js/validar2.js"></script>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <div class="navbar-fixed">
         <Nav class="green">
             <div class="nav-wrapper container">
-                <img src="../imagenes/libro.png" alt="" height="35px" width="35px"
+                <img src="https://firebasestorage.googleapis.com/v0/b/eva2-f5936.appspot.com/o/libro.png?alt=media&token=e6e02eb0-13bb-44ef-8ed3-3ddde1df8d12" alt="" height="35px" width="35px"
                     style="position: relative; top: 13px;">
                 <a href="" class="brand-logo">Bookers</a>
                 <ul class="right">
@@ -48,6 +49,7 @@
             </form>
         </div>
     </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
 </body>
