--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <!-- Compiled and minified CSS -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-  <body>
-        <div class="navbar-fixed">
-                <Nav class="green">
-                    <div class="nav-wrapper container">
-                        <img src="imagenes/libro.png" alt="" height="35px" width="35px" style="position: relative; top: 13px;">
-                        <a href="" class="brand-logo">Bookers</a>
-                        <ul class="right">
-                            <li><a href="">Biblioteca</a></li>
-                            <li><a href="">Contacto</a></li>
-                            <li><a href="paginas/login2.html">Admin</a></li>
-                        </ul>
-                    </div>
-                </Nav>
+<body>
+    <div class="navbar-fixed">
+        <Nav class="green">
+            <div class="nav-wrapper container">
+                <img src="https://firebasestorage.googleapis.com/v0/b/eva2-f5936.appspot.com/o/libro.png?alt=media&token=e6e02eb0-13bb-44ef-8ed3-3ddde1df8d12"
+                    alt="" height="35px" width="35px" style="position: relative; top: 13px;">
+                <a href="" class="brand-logo">Bookers</a>
+                <ul class="right">
+                    <li><a href="">Biblioteca</a></li>
+                    <li><a href="">Contacto</a></li>
+                    <li><a href="paginas/login2.html">Admin</a></li>
+                </ul>
             </div>
-            <img src="imagenes/background.jpg" alt="" width="1366px" height="500px">
+        </Nav>
+    </div>
+    <img src="imagenes/background.jpg" alt="" width="1366px" height="500px">
 
-            <div style="position: relative; bottom: 420px; width: 500px; left: 70px; color: white; background-color: rgba(76, 176, 80, 0.5)">
-                <h3>Bienvenido a Bookers</h3>
-                <p>
-                    Una pagina donde podras aumentar tu conocimiento y cultivar 
-                    tu creatividad con libros de todo tipo, saber mas detalles sobre tus 
-                    libros y autores favoritos
-                </p>
-                <br>
-                <a class="waves-effect waves-light btn">Ir a Muestra</a>
-            </div>
-            
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-     <script>
-     </script>
-  </body>
+    <div
+        style="position: relative; bottom: 420px; width: 500px; left: 70px; color: white; background-color: rgba(76, 176, 80, 0.5)">
+        <h3>Bienvenido a Bookers</h3>
+        <p>
+            Una pagina donde podras aumentar tu conocimiento y cultivar
+            tu creatividad con libros de todo tipo, saber mas detalles sobre tus
+            libros y autores favoritos
+        </p>
+        <br>
+        <a class="waves-effect waves-light btn">Ir a Muestra</a>
+    </div>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+    </script>
+</body>
+
 </html>
