--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
 
 <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <!--Let browser know website is optimized for mobile-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -28,8 +25,10 @@
     </div>
     <img src="imagenes/background.jpg" alt="" width="1366px" height="500px">
 
-    <div
-        style="position: relative; bottom: 420px; width: 500px; left: 70px; color: white; background-color: rgba(76, 176, 80, 0.5)">
+    <div style="position: relative; bottom: 420px; width: 500px; 
+        left: 70px; color: white; background-color: rgba(76, 176, 80, 0.5); border-radius: 20px;
+        height: 300px;">
+        <br>
         <h3>Bienvenido a Bookers</h3>
         <p>
             Una pagina donde podras aumentar tu conocimiento y cultivar
@@ -39,6 +38,21 @@
         <br>
         <a class="waves-effect waves-light btn">Ir a Muestra</a>
     </div>
+    <div style="position:relative; bottom: 350px;
+     background-color:rgba(76, 176, 80, 1);
+     height:150px; color: white; text-align: center;">
+        <h3>porque leer?</h3>
+        <p>Leer es divertido y fácil. Los libros educan, dan tema de conversación, proporcionan compañía y son baratos, 
+            incluso gratis, si recurres a una biblioteca o al proyecto Gutenberg. Pero además de todo eso, leer es bueno para tu cerebro. Te hace más listo, te relaja, incluso te ayuda a ser mejor persona. En serio. Pero eso no son motivos para leer. Sólo son efectos secundarios.</p>
+    </div>
+
+    <footer style="height:100px ; background-color: rgba(76, 176, 80, 1);">
+        aslkfasklj
+    </footer>
+
+
+
+
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
