--- a/paginas/admin.html
+++ b/paginas/admin.html
@@ -50,7 +50,7 @@
                 <button id="boton" class="btn green waves-effect waves-light" type="button" onclick="agregar()">Agregar</button>
             </form>
         </div>
-        <table>
+        <table style="color: white; position: relative; left: 650px; bottom: 350px;">
         <thead>
           <tr>
               <th>Nombre</th>
