--- a/libros/prisionero.html
+++ b/libros/prisionero.html
@@ -15,10 +15,10 @@
             <div class="nav-wrapper container">
                 <img src="https://firebasestorage.googleapis.com/v0/b/eva2-f5936.appspot.com/o/libro.png?alt=media&token=e6e02eb0-13bb-44ef-8ed3-3ddde1df8d12"
                     alt="" height="35px" width="35px" style="position: relative; top: 13px;">
-                <a href="" class="brand-logo">Bookers</a>
+                <a href="../index.html" class="brand-logo">Bookers</a>
                 <ul class="right">
-                    <li><a href="">Biblioteca</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="../paginas/biblioteca.html">Biblioteca</a></li>
+                    <li><a href="../paginas/contacto.html">Contacto</a></li>
                     <li><a href="paginas/login2.html">Admin</a></li>
                 </ul>
             </div>
