--- a/paginas/admin.html
+++ b/paginas/admin.html
@@ -19,9 +19,9 @@
     <div class="navbar-fixed">
         <Nav class="green">
             <div class="nav-wrapper container">
-                <img src="https://firebasestorage.googleapis.com/v0/b/eva2-f5936.appspot.com/o/libro.png?alt=media&token=e6e02eb0-13bb-44ef-8ed3-3ddde1df8d12" alt="" height="35px" width="35px"
+                <img src="https://firebasestorage.googleapis.com/v0/b/eva2-f5936.appspot.com/o/libro.png?alt=media&token=fcd5c523-3850-418e-8c8b-94440dccb70f" alt="" height="35px" width="35px"
                     style="position: relative; top: 13px;">
-                <a href="" class="brand-logo">Bookers</a>
+                <a href="../index.html" class="brand-logo">Bookers</a>
             </div>
         </Nav>
     </div>
