--- a/paginas/admin.html
+++ b/paginas/admin.html
@@ -22,7 +22,11 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/eva2-f5936.appspot.com/o/libro.png?alt=media&token=fcd5c523-3850-418e-8c8b-94440dccb70f" alt="" height="35px" width="35px"
                     style="position: relative; top: 13px;">
                 <a href="../index.html" class="brand-logo">Bookers</a>
+                <ul class="right">
+                    <button class="btn green waves-effect waves-light s12" onclick="cerrar()">Cerrar sesión</button>
+                </ul>
             </div>
+           
         </Nav>
     </div>
     <div style="width: 500px;">
