--- a/paginas/biblioteca.html
+++ b/paginas/biblioteca.html
@@ -26,7 +26,7 @@
                 <ul class="right">
                     <li><a href="biblioteca.html">Biblioteca</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="login.html">Admin</a></li>
+                    <li><a href="login2.html">Admin</a></li>
                 </ul>
             </div>
         </Nav>
