--- a/paginas/login.html
+++ b/paginas/login.html
@@ -9,10 +9,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
     <script src="../js/validar.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
 
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyCJ1FQVvUkpOmoc1XLd4c3ahlu8IIIG4oU",
+            authDomain: "eva2-f5936.firebaseapp.com",
+            databaseURL: "https://eva2-f5936.firebaseio.com",
+            projectId: "eva2-f5936",
+            storageBucket: "eva2-f5936.appspot.com",
+            messagingSenderId: "611276949802",
+            appId: "1:611276949802:web:c239bd2add644e96"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </head>
 
 <body>
@@ -25,37 +43,42 @@
                 <ul class="right">
                     <li><a href="">Biblioteca</a></li>
                     <li><a href="">Contacto</a></li>
-                    <li><a href="login.html">Admin</a></li>
+                    <li><a href="login2.html">Admin</a></li>
                 </ul>
             </div>
         </Nav>
     </div>
-    <div style="width: 700px;">
+    <div style="position:relative; width:500px; text-align: center; 
+    margin-right: auto; margin-left: auto; top: 100px;background-color: rgba(76, 176, 80, 0.5);
+    height: 400px; border-radius: 20px;">
+        <br>
         <div class="row">
-            <form class="col s12" id="form-aut">
+            <form id="myForm">
+                <div class="container">
 
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="user">email</label>
-                    </div>
-                </div>
+                    <label>
+                        <h4>Correo:</h4>
+                    </label>
+                    <input style="color: white" placeholder="Ingresar Correo" type="email" id="email1" required>
+
+                    <label>
+                        <h4>Contraseña: </h4>
+                    </label>
+                    <input style="color: white" type="password" placeholder="Ingresar Contraseña" id="password1" required>
 
 
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <button class="btn waves-effect waves-light" type="button" onclick="auth()">Submit
+                    <button class="btn green waves-effect waves-light" type="button" name="btnVerifica"
+                        onclick="ingresar()">Ingresar
                         <i class="material-icons right">send</i>
-                      </button>
+                    </button>
+
+
+                </div>
             </form>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
+
 </body>
 
 
